--- a/.gitignore
+++ b/.gitignore
@@ -19,17 +19,16 @@ SourceCode/nopCommerce_4.00_Source/Plugins/Nop.Plugin.DiscountRules.CustomerRole
 *.zip
 *.sln
 *.cache
-SourceCode/nopCommerce_4.00_Source/database
-SourceCode/nopCommerce_4.00_Source/Documents
+/database
+/Documents
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/tools
+/tools
+
+/build
 
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/build
+/Tests
 
+/packages
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/Tests
-
-SourceCode/nopCommerce_4.00_Source/SourceCode/packages
-
-SourceCode/nopCommerce_4.00_Source/SourceCode/Libraries
+/Libraries
