--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-
+/Libraries
 SourceCode/nopCommerce_4.00_Source/Libraries/Nop.Core/bin
 SourceCode/nopCommerce_4.00_Source/.vs
 SourceCode/nopCommerce_4.00_Source/.vs/NopCommerce/v15/.suo
@@ -33,3 +33,5 @@ SourceCode/nopCommerce_4.00_Source/SourceCode/Tests
 SourceCode/nopCommerce_4.00_Source/SourceCode/packages
 
 SourceCode/nopCommerce_4.00_Source/SourceCode/Libraries
+*.cache
+SourceCode/nopCommerce_4.00_Source/Presentation/Nop.Web/App_Data/dataSettings.json
