--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ SourceCode/nopCommerce_4.00_Source/SourceCode/packages
 SourceCode/nopCommerce_4.00_Source/SourceCode/Libraries
 *.cache
 SourceCode/nopCommerce_4.00_Source/Presentation/Nop.Web/App_Data/dataSettings.json
+SourceCode/nopCommerce_4.00_Source/Presentation/Nop.Web/App_Data/dataSettings.json
