--- a/.gitignore
+++ b/.gitignore
@@ -19,20 +19,19 @@ SourceCode/nopCommerce_4.00_Source/Plugins/Nop.Plugin.DiscountRules.CustomerRole
 *.zip
 *.sln
 *.cache
-SourceCode/nopCommerce_4.00_Source/database
-SourceCode/nopCommerce_4.00_Source/Documents
+/database
+/Documents
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/tools
+/tools
+
+/build
 
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/build
+/Tests
 
+/packages
 
-SourceCode/nopCommerce_4.00_Source/SourceCode/Tests
-
-SourceCode/nopCommerce_4.00_Source/SourceCode/packages
-
-SourceCode/nopCommerce_4.00_Source/SourceCode/Libraries
+/Libraries
 *.cache
 SourceCode/nopCommerce_4.00_Source/Presentation/Nop.Web/App_Data/dataSettings.json
-SourceCode/nopCommerce_4.00_Source/Presentation/Nop.Web/App_Data/dataSettings.json
+SourceCode/nopCommerce_4.00_Source/.vs/NopCommerce/v15/.suo
