--- a/.gitignore
+++ b/.gitignore
@@ -329,3 +329,5 @@ __pycache__/
 *.pyc
 /tools
 /Plugins
+SourceCode/nopCommerce_4.00_Source.rar
+SourceCode/nopCommerce_4.00_Source/.vs/NopCommerce/v15/.suo
